# nudge

./: Cargo.toml  PLAN.md  TODO.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  main.rs  subscription.rs
src/checker/: github.rs  mod.rs  timer.rs
src/daemon/: mod.rs
src/store/: mod.rs
